[tool.poetry]
name = "torchadv"
version = "0.0.1"
description = ""
authors = ["hupe1980"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.1"
numpy = "^2.0.0"
matplotlib = "^3.9.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
torchvision = "^0.18.1"
pillow = "^10.3.0"
tqdm = "^4.66.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
